--- a/css/styles_version2_white.css
+++ b/css/styles_version2_white.css
@@ -568,7 +568,7 @@ footer {
 
     .hero-text h1 {
         color:#665050;
-        font-size: medium;
+        font-size: 1.4em;
         line-height: 0em;
         font-family: 'Roboto', sans-serif;
         text-shadow: 1px 1px 1px #8F8F8F;
@@ -580,7 +580,7 @@ footer {
     #features .hero-text p {
         padding-top: 1.0em;
         padding-left: 0em;
-        font-size: medium;
+        font-size: 1.4em;
         line-height: 1.3em;
         color:#f49500;;
         font-style: normal;
