--- a/css/styles_black.css
+++ b/css/styles_black.css
@@ -285,7 +285,7 @@ footer {
     list-style: none;
     padding: 0 0 20px;
     margin: 0 0 15px;
-    background: #FFFFFF;
+    background: rgb(243, 227, 227);
     text-align: center;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.29) !important;
 }
