--- a/css/styles_version2_white.css
+++ b/css/styles_version2_white.css
@@ -293,7 +293,7 @@ footer {
 .flat .plan li {
     font-size: medium;
     padding: 10px 15px;
-    color: #727171;
+    color: #000000;
     border-top: 1px solid #f5f5f5;
     -webkit-transition: 300ms;
     transition: 300ms;
@@ -319,7 +319,7 @@ footer {
 }
 
 .flat .plan li.plan-action {
-    margin-top: 10px;
+    margin-top: 0px;
     border-top: 0;
 }
 
@@ -340,6 +340,12 @@ footer {
 .plan-name {
     background: #f49500 !important;
 }
+
+
+@media screen and (min-width: 700px) {
+    #features .flat .plan .oneLine {display: none; }
+}
+
 
 /* ipad */
 @media screen and (max-width: 1000px) {
@@ -405,8 +411,8 @@ footer {
 
     #features .flat .plan li {
         font-size: large;
-        line-height: 100%;
-        color: #727171;
+        line-height: 50%;
+        color: #000000;
         border-top: 1px solid #f5f5f5;
         -webkit-transition: 300ms;
         transition: 300ms;
@@ -523,8 +529,8 @@ footer {
 
     #features .flat .plan li {
         font-size: small;
-        line-height: 100%;
-        color: #727171;
+        line-height: 40%;
+        color: #000000;
         border-top: 1px solid #f5f5f5;
         -webkit-transition: 300ms;
         transition: 300ms;
@@ -641,7 +647,7 @@ footer {
 
     #features .flat .plan li {
         font-size: small;
-        line-height: 100%;
+        line-height: 40%;
         color: #000000;
         border-top: 1px solid #f5f5f5;
         -webkit-transition: 300ms;
