--- a/css/styles_version2_white.css
+++ b/css/styles_version2_white.css
@@ -173,6 +173,17 @@ footer {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
 }
 
+.hero-text .instructor h1{
+    color:#665050;
+    font-size: x-large;
+    line-height: 0em;
+    font-family: 'Roboto', sans-serif;
+    text-shadow: 1px 1px 1px #8F8F8F;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
+    text-align: left;
+    padding-left: 0em;
+}
+
 #features .hero-text p {
     padding-top: 1.0em;
     font-size:4.0em;
@@ -364,6 +375,17 @@ footer {
     .hero-text h1 {
         color:#665050;
         font-size: x-large;
+        line-height: 0em;
+        font-family: 'Roboto', sans-serif;
+        text-shadow: 1px 1px 1px #8F8F8F;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
+        text-align: left;
+        padding-left: 0em;
+    }
+
+    .hero-text .instructor h1{
+        color:#665050;
+        font-size: large;
         line-height: 0em;
         font-family: 'Roboto', sans-serif;
         text-shadow: 1px 1px 1px #8F8F8F;
@@ -722,7 +744,7 @@ footer {
     #features .hero-text p {
         padding-top: 1.0em;
         padding-left: 0em;
-        font-size: 1.4em;
+        font-size: 1.2em;
         line-height: 1.3em;
         color:#f49500;;
         font-style: normal;
