--- a/css/styles_version2_white.css
+++ b/css/styles_version2_white.css
@@ -631,7 +631,7 @@ footer {
     #features .flat .plan li {
         font-size: small;
         line-height: 80%;
-        color: #D6D6D6;
+        color: #727070;
         border-top: 1px solid #f5f5f5;
         -webkit-transition: 300ms;
         transition: 300ms;
